# MomentOfSwiftV3

./: .gitignore  LICENSE  README.md
Docs/: Apis.md  DB - Boxes.md  DB - Files.md  DB - Groups.md  DB - Invitations.md  DB - Tasks.md  DB - Users.md  DB.md  Permissions.md
Local/LabelWeb/: README.md  package-lock.json  package.json
Local/LabelWeb/public/: global.css
Local/LabelWeb/src/: App.svelte  apis.js
Local/LabelWeb/src/components/: CustomScroll.svelte  EditorToolsPanel.svelte  Header.svelte  SearchInput.svelte  SortMethodSelector.svelte  TabSwitcher.svelte
Local/LabelWeb/src/reusable/: Card.svelte  CardCreateNew.svelte  Pagination.svelte  Switch.svelte  TaskCard.svelte
Local/LabelWeb/src/routes/: AllTasks.svelte  Editor.svelte  Index.svelte  MyTasks.svelte
Local/SSOWeb/: README.md
Local/SSOWeb/public/: index.html
Local/SSOWeb/src/: apis.js  stores.js
Local/SSOWeb/src/components/: Background.svelte  StageName.svelte  StagePassword.svelte  StageSelect.svelte
Local/SSOWeb/src/reusable/: Error.svelte  Input.svelte  Link.svelte  Loading.svelte  Success.svelte
Local/SSOWeb/src/routes/: Login.svelte  Register.svelte
Remote/ApiBasics/: .gitignore  Cargo.toml  README.md
Remote/ApiBasics/src/: lib.rs
Remote/DataModel/: .gitignore  Cargo.toml  README.md
Remote/DataModel/data_model/: Cargo.toml  README.md
Remote/DataModel/data_model/src/: README.md  lib.rs
Remote/DataModel/data_model/src/collections/: .mod.rs.swp  _template.rs  files.rs  groups.rs  mod.rs  users.rs
Remote/DataModel/data_model_macro/: Cargo.toml  README.md
Remote/DataModel/data_model_macro/src/: lib.rs
Remote/DataModel/src/: lib.rs
Remote/DataModel/src/collections/: files.rs  mod.rs
Remote/LabelApi/: README.md
Remote/SSOApi/: Cargo.toml  README.md
Remote/SSOApi/src/: README.md  main.rs
Remote/StorageApi/: Cargo.toml  README.md
Remote/StorageApi/src/: sign.rs
SSOApi/: package-lock.json
SSOApi/src/: main.rs
SSOWeb/public/: global.css
SSOWeb/src/: App.svelte  apis.js
SSOWeb/src/components/: Background.svelte  Card.svelte
SSOWeb/src/reusable/: Button.svelte  Error.svelte  Input.svelte  Link.svelte  Loading.svelte  Switch.svelte
SSOWeb/src/routes/: 404.svelte  Login.svelte  Register.svelte
