[package]
name = "ApiBasics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "2.1.0", features = ["async-std-runtime"], default-features = false }
tide = "0.16.0"
anyhow = "1.0.56"
serde = "1.0.136"
serde_json = "1.0.79"
data_model = { path = "../DataModel/data_model" }