[package]
name = "data_model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.2.0"
chrono = "0.4.19"
serde = { version = "1.0.137", features = ["derive"] }
uuid = { version = "1.0.0", features = ["v4", "serde", "fast-rng"] }
mongodm = { version = "0.9.0", features = ["async-std-runtime"], default-features = false }
async-std = { version = "1.11.0", features = ["attributes"] }
anyhow = "1.0.57"
mem_cache = "0.1.2"
async-trait = "0.1.53"
