[package]
name = "data_model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = { version = "2.2.0", features = ["chrono-0_4"] }
chrono = "0.4.19"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
uuid = { version = "1.0.0", features = ["v4", "serde", "fast-rng"] }
mongodm = { version = "0.9.0", features = ["async-std-runtime"], default-features = false }
async-std = { version = "1.11.0", features = ["attributes"] }
anyhow = "1.0.57"
#mem_cache = "0.1.2"
async-trait = "0.1.53"
hmac = "0.12.1"
base64 = "0.13.0"
r-cache = "0.4.4"
lazy_static = "1.4.0"
sha1 = "0.10.1"
url-escape = "0.1.1"
urlqstring = "0.3.5"
data_model_macro = { path = "../data_model_macro" }